Index and JS update - Implemented RPS game logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<header></header>
+		<header>Rock, Paper, Scissors</header>
 		<main></main>
 		<footer></footer>
 		<script src="scripts.js"></script>
